<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4">

        <RelativeLayout
            android:id="@+id/game_review_home_container"
            style="@style/GameReviewTeamContainer" />

        <LinearLayout
            style="@style/WidthDependsOnWeight"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_name" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_points" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_2pt_fg" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_2pt_fg_percentage" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_3pt_fg" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_3pt_fg_percentage" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_ft" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_ft_percentage" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_offensive_rebounds" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_defensive_rebounds" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_total_rebounds" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_assists" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_steals" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_blocks" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_turnovers" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_fouls" />

            <TextView
                style="@style/GameReviewTableCell"
                android:text="@string/game_review_team_total_possession" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/game_review_away_container"
            style="@style/GameReviewTeamContainer" />
    </LinearLayout>
</ScrollView>