<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	<TextView
		android:id="@+id/detailed_team_review_teamName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="@dimen/standard_padding_size" />
	<ScrollView
		android:id="@+id/detailed_team_review_teamStats_scrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<LinearLayout
			android:id="@+id/detailed_team_review_teamStats_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
			<LinearLayout
				android:id="@+id/detailed_team_review_teamStats_titleBar"
				style="@style/TeamReviewTablePlayerStats" >
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerNumber"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerNumber" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerName"
					style="@style/TeamReviewTablePlayerNameCell"
					android:text="@string/detailed_team_review_playerName" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerTime"
					style="@style/TeamReviewTablePlayerTimeCell"
					android:text="@string/detailed_team_review_playerTime" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_player2ptFG"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_player2ptFG" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_player3ptFG"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_player3ptFG" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerFT"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerFT" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerOffReb"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerOffReb" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerDefReb"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerDefReb" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerTotalReb"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerTotalReb" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerAst"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerAst" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerTO"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerTO" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerStl"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerStl" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerBlk"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerBlk" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerFouls"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerFoul" />
				<TextView
					android:id="@+id/detailed_team_review_teamStats_playerPts"
					style="@style/TeamReviewTableDefaultCell"
					android:text="@string/detailed_team_review_playerPts" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>